# GooseBib

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  CMakeLists.txt  README.md  environment.yaml  pyproject.toml  setup.py  t.py
.github/workflows/: ci.yml  pythonpublish.yml
GooseBib/: PNAS-USA.yaml  PNAS.yaml  __init__.py  arXiv.yaml  bibtex.py  journals.py  mechanics.yaml  physics.yaml  recognise.py  reformat.py  tex.py
GooseBib/cli/: GbibCheckAuthors.py  GbibCheckKeys.py  GbibCheckLink.py  GbibClean.py  GbibList.py  GbibParse  GbibParse.py  GbibSelect.py  GbibSelectAlias.py
docs/: conf.py  index.rst  install.rst  module.rst  tools.rst  usage.rst  zotero.rst
tests/: GbibClean.py  journals.py  library.yaml  library_arxiv_preprint.bib  library_arxiv_preprint.yaml  library_hidden_doi_arxiv.bib  library_mendeley.bib  library_missing_doi_arxiv.bib  recognise.py  reformat.py  test_GbibClean.py  test_bibtex.py  test_journals.py  test_recognise.py  test_reformat.py  test_tex.py
